kubernetes/statping/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: statping
  namespace: hello-world
  labels:
    app: statping
    service: statping
  annotations:
    cert-manager.io/issuer: webapps.fr
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: status-hello-world.webapps.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: statping
          servicePort: 8080
  tls:
  - hosts:
    - status-hello-world.webapps.fr
    secretName: status-hello-world.webapps.fr-tls
